--- a/plant_diagnosis/requirements.txt
+++ b/plant_diagnosis/requirements.txt
@@ -1,7 +1,7 @@
-Flask
-gunicorn
-numpy
-pandas
-scikit-learn
-Pillow
+Flask==3.1.2
+gunicorn==23.0.0
+numpy==1.23.5
+pandas==2.3.3
+scikit-learn==1.8.0
+Pillow==12.0.0
 tensorflow-cpu==2.11.0
